--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "clinic": "clinic doctor --on-port 'autocannon -m POST localhost:8000/users/register' -- node dist/main.js",
     "lint": "eslint ./src/**",
     "lint:fix": "eslint ./src/** --fix",
+    "generate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -37,6 +39,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
+    "prisma": "^3.13.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
