--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.13.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "inversify": "^6.0.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tslog": "^3.3.3"
   },
